[package]
name = "har-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
